# rvc4py

./: README.md  pyproject.toml  requirements.txt  setup.py
rvc4py/: __init__.py
rvc4py/rvc/configs/: __init__.py  config.py
rvc4py/rvc/configs/v1/: 32k.json  40k.json  48k.json
rvc4py/rvc/configs/v2/: 32k.json  48k.json
rvc4py/rvc/lib/: audio.py  rmvpe.py
rvc4py/rvc/lib/infer_pack/: attentions.py  models.py  models_onnx.py  modules.py
rvc4py/rvc/lib/infer_pack/modules/F0Predictor/: DioF0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py
rvc4py/rvc/lib/ipex/: __init__.py  attention.py  gradscaler.py  hijacks.py
rvc4py/rvc/lib/jit/: __init__.py  get_hubert.py
rvc4py/rvc/lib/train/: data_utils.py  process_ckpt.py
rvc4py/rvc/lib/train/architecture/: v1.yml  v2.yml
rvc4py/rvc/lib/uvr5_pack/: utils.py
rvc4py/rvc/lib/uvr5_pack/lib_v5/: spec_utils.py
rvc4py/rvc/modules/onnx/: export.py
rvc4py/rvc/modules/uvr5/: mdxnet.py  modules.py  vr.py
rvc4py/rvc/modules/vc/: modules.py  pipeline.py  utils.py
