[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc4py"
version = "0.0.1"
description = "Simple RVC inference in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT license"}
authors = [{name = "Romyx"}]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]